# hsr_pic_parser

./: LICENCE.txt  README.md  build.yml  pyproject.toml  requirements.txt  setup.py
hsr_pic_parser/: __init__.py  character_picture.py  get_cone.py  get_picture_info.py  get_relic.py  picture_url.py  prydwen.py
my_package/: get_cone.py  get_pic_info.py  get_relic.py
parser/: __init__.py  char_pic.py  character_picture.py  cut_url.py  get_cone.py  get_relic.py
